--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
         </div>
     </div>*@
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+        <a class="navbar-brand" href="#">My Sample Program</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,14 +42,23 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Home">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="~/Home/About">About</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="~/Home/Contact">Contact</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="~/Students">Students</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="~/Account/Login">Login</a>
+                </li>
+                <li class=" nav-item active">
+                    <a class="nav-link" href="~/Account/Register">Register</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="~/Manage/ManageLogins">Management</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
