About us page in progress

--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -1,7 +1,87 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<div style="display: flex; justify-content: center;">
 
-<p>Use this area to provide additional information.</p>
+</div>
+
+
+<body>
+
+    <div style="display: flex; justify-content: center;">
+        <img src="~/Pictures/SOSLogo.jpg" alt="Logo" width=1000 align="middle" /><img /><br />
+    </div>
+
+    <p>
+        <div style="display: flex; justify-content: center;">
+            <br /><iframe width="560" height="315" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="middle"></iframe><br />
+
+        </div>
+    </p><br />
+    <p>
+   <h2 style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"><span style="color:red">Surgery On Sunday – Louisville, Inc.</span> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.  <span style="color:red"><b> Our patients never see a bill.</b></span> We are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.
+    </h2>
+       </p>
+    <p><table width="450px">
+    </tr>
+    <tr>
+        <td valign="top">
+            <label for="first_name">First Name *</label>
+        </td>
+        <td valign="top">
+            <input type="text" name="first_name" maxlength="50" size="30">
+        </td>
+    </tr>
+
+    <tr>
+        <td valign="top" ">
+            <label for="last_name">Last Name *</label>
+        </td>
+        <td valign="top">
+            <input type="text" name="last_name" maxlength="50" size="30">
+        </td>
+    </tr>
+    <tr>
+        <td valign="top">
+            <label for="email">Email Address *</label>
+        </td>
+        <td valign="top">
+            <input type="text" name="email" maxlength="80" size="30">
+        </td>
+
+    </tr>
+    <tr>
+        <td valign="top">
+            <label for="telephone">Telephone Number</label>
+        </td>
+        <td valign="top">
+            <input type="text" name="telephone" maxlength="30" size="30">
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2" style="text-align:center">
+            <input type="submit" value="Submit">  
+        </td>
+    </tr>
+</table></p>
+    
+    
+
+
+</body>
+
+
+<ul>
+    <li>benefit of using product or services</li>
+    <li>benefit of using product or services (optional)</li>
+    <li>benefit of using product or services (optional)</li>
+</ul>
+<h2>Your Company's Name's mission</h2>
+<ul>
+    <li>most important goal for serving customers</li>
+    <li>2nd most important goal for serving customers (optional)</li>
+    <li>3rd most important goal for serving customers (optional)</li>
+</ul>
+<h2>Your Company's Name proudly serves</h2>
+<ul>
+    <li>1st most important customer or group</li>
+    <li>2nd most important customer or group</li>
+    <li>3rd most important customer or group</li>
+</ul>
