--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -16,53 +16,69 @@
         </div>
     </p><br />
     <p>
-   <h2 style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"><span style="color:red">Surgery On Sunday – Louisville, Inc.</span> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.  <span style="color:red"><b> Our patients never see a bill.</b></span> We are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.
-    </h2>
-       </p>
-    <p><table width="450px">
-    </tr>
-    <tr>
-        <td valign="top">
-            <label for="first_name">First Name *</label>
-        </td>
-        <td valign="top">
-            <input type="text" name="first_name" maxlength="50" size="30">
-        </td>
-    </tr>
-
-    <tr>
-        <td valign="top" ">
-            <label for="last_name">Last Name *</label>
-        </td>
-        <td valign="top">
-            <input type="text" name="last_name" maxlength="50" size="30">
-        </td>
-    </tr>
-    <tr>
-        <td valign="top">
-            <label for="email">Email Address *</label>
-        </td>
-        <td valign="top">
-            <input type="text" name="email" maxlength="80" size="30">
-        </td>
-
-    </tr>
-    <tr>
-        <td valign="top">
-            <label for="telephone">Telephone Number</label>
-        </td>
-        <td valign="top">
-            <input type="text" name="telephone" maxlength="30" size="30">
-        </td>
-    </tr>
-    <tr>
-        <td colspan="2" style="text-align:center">
-            <input type="submit" value="Submit">  
-        </td>
-    </tr>
-</table></p>
+        <h2 style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
+            <span style="color:red">Surgery On Sunday – Louisville, Inc.</span> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.  <span style="color:red"><b> Our patients never see a bill.</b></span> We are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.
+        </h2>
+    </p>
+   
+    <h1><div style="display: flex; justify-content: center;">
+    Subscribe to our quarterly mailing list:<br />
+</div>
     
+   </h1>
+    <p>
+        <div style="display: flex; justify-content: center; border:3px; border-style:solid; border-color:red; padding:1em;">
+            <table width="1000">
+                <tr>
+                    <td valign="top">
+                        <label for="first_name"><b>First Name *</b></label>
+                    </td>
+                    <td valign="top">
+                        <input type="text" name="first_name" maxlength="50" size="30" >
+                    </td>
+                </tr>
+
+                <tr>
+                    <td valign="top">
+                        <label for="last_name"><b>Last Name *</b></label>
+                    </td>
+                    <td valign="top">
+                        <input type="text" name="last_name" maxlength="50" size="30">
+                    </td>
+                </tr>
+                <tr>
+                    <td valign="top">
+                        <label for="email"><b>Email Address *</b></label>
+                    </td>
+                    <td valign="top">
+                        <input type="text" name="email" maxlength="80" size="30">
+                    </td>
+
+                </tr>
+                <tr>
+                    <td colspan="2" style="text-align:center">
+                        <input type="submit" value="Subscribe">
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </p>
+    <p>
+        <h1>
+            <div style="display: flex; justify-content: center;">
+                <b>Check us out on Social Media!</b>
+
+
+            </div>
+        </h1>
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        <br /><a class="twitter-timeline" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </p>
+
     
+
+
 
 
 </body>
