--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="~/Home/About">About</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="~/getInvolved/GetInvolved">Get Involved</a>
+                    <a class="nav-link" href="~/Home/Contact">Contact</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Students">Students</a>
@@ -34,6 +34,9 @@
                 </li>
                 <li class=" nav-item active">
                     <a class="nav-link" href="~/Account/Register">Register</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="~/Manage/ManageLogins">Management</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
