added cursor change for hovering over embedded links

--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -71,15 +71,25 @@
 
             </div>
         </h1>
-        <div>
-            
+        
+        
+        <section>
+            <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" align="middle" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;" /><img />
+        </section>
+        
+        <section>
+
             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-            
+
+
+
             <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+        </section>
+            
         
-        </div>
+        
     </p>
 
     
