Changed positioning of logos

--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -74,10 +74,11 @@
         
         
         <section>
-            <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" align="middle" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;" /><img />
-        </section>
+            <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:absolute; top:1780px; right:742px;" /><img />
+            <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:absolute; top:1780px; right:1083px;" /><img />
+        </section><br />
         
-        <section>
+       <br /><br /> <section>
 
             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
