--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -1,121 +1,138 @@
-﻿<div style="display: flex; justify-content: center;">
+﻿
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-</div>
 
+    <h2 class="w3-center">Come be a part of something truly special!</h2>
 
-<body>
+    <div class="w3-content w3-display-container">
+        <img class="mySlides" src="~/Pictures/SOS Collage.jpg" style="width:100%">
+        <img class="mySlides" src="~/Pictures/SOSShirtPic.jpg" style="width:100%">
+        <img class="mySlides" src="~/Pictures/SOS Pic.jpg" style="width:100%">
 
-    <div style="display: flex; justify-content: center;">
-        <img src="~/Pictures/SOSLogo.jpg" alt="Logo" width=1000 align="middle" /><img /><br />
+        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
     </div>
 
-    <p>
+    <script>
+        var slideIndex = 1;
+        showDivs(slideIndex);
+
+        function plusDivs(n) {
+            showDivs(slideIndex += n);
+        }
+
+        function showDivs(n) {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            if (n > x.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = x.length }
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            x[slideIndex - 1].style.display = "block";
+        }
+    </script>
+
+
+    <body>
+        <link rel="stylesheet" type="text/css" href="~/Border.css" />
+
         <div style="display: flex; justify-content: center;">
-            <br /><iframe width="560" height="315" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="middle"></iframe><br />
-
+            <img src="~/Pictures/SOSLogo.jpg" alt="Logo" width=1000 align="middle" /><img /><br />
         </div>
-    </p><br />
-    <p>
-        <h2 style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
-            <span style="color:red">Surgery On Sunday – Louisville, Inc.</span> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.  <span style="color:red"><b> Our patients never see a bill.</b></span> We are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.
-        </h2>
-    </p>
-   
-    <h1><div style="display: flex; justify-content: center;">
-    Subscribe to our quarterly mailing list:<br />
-</div>
-    
-   </h1>
-    <p>
-        <div style="display: flex; justify-content: center; border:3px; border-style:solid; border-color:red; padding:1em;">
-            <table width="1000">
-                <tr>
-                    <td valign="top">
-                        <label for="first_name"><b>First Name *</b></label>
-                    </td>
-                    <td valign="top">
-                        <input type="text" name="first_name" maxlength="50" size="30" >
-                    </td>
-                </tr>
 
-                <tr>
-                    <td valign="top">
-                        <label for="last_name"><b>Last Name *</b></label>
-                    </td>
-                    <td valign="top">
-                        <input type="text" name="last_name" maxlength="50" size="30">
-                    </td>
-                </tr>
-                <tr>
-                    <td valign="top">
-                        <label for="email"><b>Email Address *</b></label>
-                    </td>
-                    <td valign="top">
-                        <input type="text" name="email" maxlength="80" size="30">
-                    </td>
-
-                </tr>
-                <tr>
-                    <td colspan="2" style="text-align:center">
-                        <input type="submit" value="Subscribe">
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </p>
-    <p>
-        <h1>
+        <p>
             <div style="display: flex; justify-content: center;">
-                <b>Check us out on Social Media!</b>
-
+                <br /><iframe width="560" height="315" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="middle"></iframe><br />
 
             </div>
+        </p><br />
+        <p>
+
+            <h2 style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
+                <span style="color:red">Surgery On Sunday – Louisville, Inc.</span> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.  <span style="color:red"><b> Our patients never see a bill.</b></span> We are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.
+            </h2>
+        </p>
+
+        <h1>
+            <div style="display: flex; justify-content: center;">
+                Subscribe to our quarterly mailing list:<br />
+            </div>
+
         </h1>
-        
-        
-        <section>
-        
-            <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:absolute; top:1780px; right:742px;" /><img />
-            <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:absolute; top:1780px; right:1083px;" /><img />
-        </section><br />
-        
-       <br /><br /> <section>
+        <p>
+            <div style="display: flex; justify-content: center; border:3px; border-style:solid; border-color:red; padding:1em;">
+                <table width="1000">
+                    <tr>
+                        <td valign="top">
+                            <label for="first_name"><b>First Name *</b></label>
+                        </td>
+                        <td valign="top">
+                            <input type="text" name="first_name" maxlength="50" size="30">
+                        </td>
+                    </tr>
 
-            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"  width="340" height="500" style="border:none;overflow:hidden;" scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
+                    <tr>
+                        <td valign="top">
+                            <label for="last_name"><b>Last Name *</b></label>
+                        </td>
+                        <td valign="top">
+                            <input type="text" name="last_name" maxlength="50" size="30">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top">
+                            <label for="email"><b>Email Address *</b></label>
+                        </td>
+                        <td valign="top">
+                            <input type="text" name="email" maxlength="80" size="30">
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td colspan="2" style="text-align:center">
+                            <input type="submit" value="Subscribe">
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </p>
+        <p>
+            <h1>
+                <div style="display: flex; justify-content: center;">
+                    <b>Check us out on Social Media!</b>
+
+
+                </div>
+            </h1>
+
+
+            <section>
+
+                <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:absolute; top:2245px; right:1120px;" /><img />
+                <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:absolute; top:2245px; right:1450px;" /><img />
+            </section><br />
+
+            <br /><br /> <section>
+
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden;" scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
 
 
 
-            <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <a class="twitter-timeline" data-width="340" data-height="515" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-        </section>
-            
-        
-        
-    </p>
+            </section>
 
-    
+
+
+        </p>
 
 
 
 
-</body>
 
 
-<ul>
-    <li>benefit of using product or services</li>
-    <li>benefit of using product or services (optional)</li>
-    <li>benefit of using product or services (optional)</li>
-</ul>
-<h2>Your Company's Name's mission</h2>
-<ul>
-    <li>most important goal for serving customers</li>
-    <li>2nd most important goal for serving customers (optional)</li>
-    <li>3rd most important goal for serving customers (optional)</li>
-</ul>
-<h2>Your Company's Name proudly serves</h2>
-<ul>
-    <li>1st most important customer or group</li>
-    <li>2nd most important customer or group</li>
-    <li>3rd most important customer or group</li>
-</ul>
+    </body>
