--- a/WebApplication3/Views/GetInvolved/GetInvolved.cshtml
+++ b/WebApplication3/Views/GetInvolved/GetInvolved.cshtml
@@ -6,7 +6,7 @@
 <br />
 <h2 align="middle" style="color:crimson">Get Involved</h2>
 
-<div style="height:1px; background-color:crimson; padding-left:10vw; padding-right:10vw">
+<div style="height:1px; background-color:crimson;">
 </div>
 <br />
 <p><br />We are always looking for clinical and non-clinical volunteers who are as passionate about care as we are. If you are interested in serving with us, please click on the appropriate link below. Please note that for clinical volunteers, credentialing takes approximately 30 days to process.</p>
