Fixed issue with different sized screens (hopefully)

--- a/WebApplication3/Border.css
+++ b/WebApplication3/Border.css
@@ -1,10 +1,10 @@
 ﻿body {
 
     border-right-color: lightgray;
-    border-right-width: 500px;
+    border-right-width: 12vw;
     border-right-style:solid;
     border-left-color: lightgray;
-    border-left-width: 500px;
+    border-left-width: 12vw;
     border-left-style:solid;
     
 }
