--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -111,8 +111,8 @@
 
             <section>
 
-                <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:absolute; top:2245px; right:1120px;" /><img />
-                <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:absolute; top:2245px; right:1450px;" /><img />
+                <img src="~/Pictures/twitterLogo.png" alt="Logo" width=80 height="80" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer; position:relative; top:30px; left:470px;" /><img />
+                <img src="~/Pictures/Facebooklogo.png" alt="Logo" width=85 height="85" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; position:relative; top:30px; left:53px;" /><img />
             </section><br />
 
             <br /><br /> <section>
