--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="~/GetInvolved/GetInvolved">Get Involved</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="~/Students">Students</a>
+                    <a class="nav-link" href="~/Students/Index">Students</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Account/Login">Login</a>
