added dropdown menuu to navbar

--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -17,12 +17,15 @@
 
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="~/Home">Home <span class="sr-only">(current)</span></a>
+                
+                <li class="dropdown">
+                    <a class="nav-link" href="~/Home/About"> <span style="color:white">About</span> <span class="sr-only">(current)</span></a>
+                    <div class="dropdown-content">
+                        <a href="~/Home/Staff">Staff</a>
+                        <a href="#">Board of Directors</a>
+                        </div>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="~/Home/About">About</a>
-                </li>
+
                 <li class="nav-item active">
                     <a class="nav-link" href="~/GetInvolved/GetInvolved">Get Involved</a>
                 </li>
@@ -42,6 +45,49 @@
             </form>
         </div>
     </nav>
+    <style>
+        .dropbtn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 16px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+            .dropdown-content a {
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+            }
+
+                .dropdown-content a:hover {
+                    background-color: #f1f1f1
+                }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown:hover .dropbtn {
+            background-color: #3e8e41;
+        }
+    </style>
 
     <div class="container body-content">
         @RenderBody()
