added staff page

--- a/WebApplication3/Views/Home/Staff.cshtml
+++ b/WebApplication3/Views/Home/Staff.cshtml
@@ -6,9 +6,49 @@
 
 <p>
     <link rel="stylesheet" type="text/css" href="~/Border.css" />
-    <h1 style="color:red">
-        Our friendly Surgery on Sunday Louisville, Inc. Staff are dedicated to serving all SOSL patients, volunteers, and partners.
+    <h1 style="color:red; padding-left:10vw; padding-right:10vw">
+        Our friendly Surgery on Sunday Louisville, Inc. Staff are dedicated to serving all SOSL patients, volunteers, and partners.<br />
+
     </h1>
-    <img src="" /><img />
+    <div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div>
+
+    <link rel="stylesheet" type="text/css" href="~/Rotating pics.css" />
+    <figure class="snip1581">
+        <img src="~/Pictures/EricaSOS.jpg" height="350" width="400" alt="profile-sample2" />
+        <figcaption>
+            <h3 class="title1">Erica</h3>
+            <h3 class="title2">Sutton</h3>
+            <h3 class="title3">M.D. - President & CEO</h3>
+        </figcaption><a href="#"></a><br />
+        <br />
+    </figure>
+    <figure class="snip1581">
+        <img src="~/Pictures/SamSOS.png" height="350" width="400" alt="profile-sample7" />
+        <figcaption>
+            <h3 class="title1">Sam</h3>
+            <h3 class="title2">Walling</h3>
+            <h3 class="title3">M.D. – Medical Director</h3>
+        </figcaption><a href="#"></a>
+    </figure>
+    <figure class="snip1581">
+        <img src="~/Pictures/BeatrizSOS.jpeg" width="400" height="350" alt="profile-sample6" />
+        <figcaption>
+            <h3 class="title1">Beatriz</h3>
+            <h3 class="title2">Sanchez</h3>
+            <h3 class="title3">Clinical Coordinator</h3>
+        </figcaption><a href="#"></a>
+    </figure>
+    <figure class="snip1581">
+        <img src="~/Pictures/JordanSOS.jpg" width="400" height="350" alt="profile-sample6" />
+        <figcaption>
+            <h3 class="title1">Jordan</h3>
+            <h3 class="title2">Licata</h3>
+            <h3 class="title3">Technology Coordinator</h3>
+        </figcaption><a href="#"></a>
+        </figure>
+
+
+
+
 </p>
 
