--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -38,7 +38,7 @@
 
 
 <body>
-    <link rel="stylesheet" type="text/css" href="~/Border.css" />
+    <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Border.css" />
 
     <div style="display: flex; justify-content: center;">
         <img src="~/Pictures/SOSLogo.jpg" alt="Logo" width=1000 align="middle" /><img /><br />
