--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
 
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
-                
+
                 <li class="dropdown">
                     <a class="nav-link" href="~/Home/About"> <span style="color:white">About</span> <span class="sr-only">(current)</span></a>
                     <div class="dropdown-content">
                         <a href="~/Home/Staff">Staff</a>
                         <a href="#">Board of Directors</a>
-                        </div>
+                    </div>
                 </li>
 
                 <li class="nav-item active">
@@ -39,10 +39,9 @@
                     <a class="nav-link" href="~/Account/Register">Register</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <img src="~/Pictures/twitterLogo.png" width="35" height="35" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer" /><img />
+            <img src="~/Pictures/Facebooklogo.png" width="35" height="35" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer"/><img />
+
         </div>
     </nav>
     <style>
