Started work on board of directors page, added logo to navbar, social media as well

--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@{
+    ViewBag.Title = "About Us";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <!--comment-->
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
