--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Sample Program</title>
+    <title>@ViewBag.Title - SOS Louisville</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-        <a class="navbar-brand" href="#">My Sample Program</a>
+        <img class="navbar-brand" src="~/Pictures/SosLouTranspar.png" width="150" height="60" />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="~/Home/About"> <span style="color:white">About</span> <span class="sr-only">(current)</span></a>
                     <div class="dropdown-content">
                         <a href="~/Home/Staff">Staff</a>
-                        <a href="#">Board of Directors</a>
+                        <a href="~/Home/BoardOfDirectors">Board of Directors</a>
                     </div>
                 </li>
 
@@ -39,8 +39,8 @@
                     <a class="nav-link" href="~/Account/Register">Register</a>
                 </li>
             </ul>
-            <img src="~/Pictures/twitterLogo.png" width="35" height="35" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer" /><img />
-            <img src="~/Pictures/Facebooklogo.png" width="35" height="35" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer"/><img />
+            <img src="~/Pictures/twitterLogo.png" width="60" height="60" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer" /><img />
+            <img src="~/Pictures/Facebooklogo.png" width="60" height="60" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer"/><img />
 
         </div>
     </nav>
