Finished board of directors html page

--- a/WebApplication3/Views/Home/BoardOfDirectors.cshtml
+++ b/WebApplication3/Views/Home/BoardOfDirectors.cshtml
@@ -13,7 +13,7 @@
         <div style="width:10%; float:left; padding-left:1vw">
 
 
-            <img src="~/BOD Pics/ClairSOSPic.png" /><img /><br /><br />
+            <img src="~/BOD Pics/ClairSOSPic.png" /><img /><br />
         </div><br />
 
         <div style="width:90%;float:right">
@@ -29,7 +29,7 @@
         <div style="width:10%; float:left; padding-left:1vw">
 
 
-            <img src="~/BOD Pics/ShawnSOSPic.png" /><img /><br /><br />
+            <img src="~/BOD Pics/ShawnSOSPic.png" /><img /><br />
         </div><br />
 
         <div style="width:90%;float:right">
@@ -45,7 +45,7 @@
         <div style="width:10%; float:left; padding-left:1vw">
 
 
-            <img src="~/BOD Pics/PhillipSOSPic.png" /><img /><br /><br />
+            <img src="~/BOD Pics/PhillipSOSPic.png" /><img /><br />
         </div><br />
 
         <div style="width:90%;float:right">
@@ -61,7 +61,7 @@
         <div style="width:10%; float:left; padding-left:1vw">
 
 
-            <img src="~/BOD Pics/BODSamSOSPic.png" /><img /><br /><br />
+            <img src="~/BOD Pics/BODSamSOSPic.png" /><img /><br />
         </div><br />
 
         <div style="width:90%;float:right">
@@ -77,12 +77,108 @@
         <div style="width:10%; float:left; padding-left:1vw">
 
 
-            <img src="~/BOD Pics/PhyllisSOSPic.png" style="width:75px; height:100px" /><img /><br /><br />
+            <img src="~/BOD Pics/PhyllisSOSPic.png" style="width:75px; height:100px" /><img /><br />
         </div><br />
 
         <div style="width:90%;float:right">
             <h1 align="left" style="font-size:18px;">
                 Phyllis Florman has served as a commissioner of the Louisville Jefferson County Human Relations Commission and was appointed three times to the Kentucky Commission on Women. During her third term, she was elected vice-chair of the National Association of Commission on Women. Other career highlights include president of the Louisville Bar Foundation, The University of Louisville Law Alumni Association, and The Family Place, a child sexual abuse treatment agency. Florman was named a Woman of Distinction in 2014 by the Louisville-based Center for Women and Families for her work with victims of domestic abuse.  She now is a professional arbiter and mediator.
+            </h1>
+        </div>
+    </div>
+
+    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+
+    <div class="row">
+        <div style="width:10%; float:left; padding-left:1vw">
+
+
+            <img src="~/BOD Pics/EllenSOSPic.png" style="width:75px; height:100px" /><img /><br />
+        </div><br />
+
+        <div style="width:90%;float:right">
+            <h1 align="left" style="font-size:18px;">
+                A retired attorney, a colon cancer survivor, and a long-time volunteer in various capacities, Ellen Rudd’s background includes working with Downs syndrome children, presiding as president and treasurer of various local organizations in Kentucky and Connecticut, strategizing, arguing, organizing, and dreaming.
+            </h1>
+        </div>
+    </div>
+
+    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+
+    <div class="row">
+        <div style="width:10%; float:left; padding-left:1vw">
+
+
+            <img src="~/BOD Pics/DorothySOSPic.png" style="width:75px; height:100px" /><img /><br />
+        </div><br />
+
+        <div style="width:90%;float:right">
+            <h1 align="left" style="font-size:18px;">
+                Dorothy Pitt earned her law degree in 1977 from the Brandeis School of Law at the University of Louisville.  She has served as the Corporate Director of Personnel for Humana, was the managing partner for Pitt & Fenton Attorneys at Law, and SVP of Human Resources for Republic Bank & Trust.  She now advises and assists other attorneys in labor and employment law matters; apprentice arbitrator assisting in researching and writing opinions.  Dorothy serves as the Vice President of Surgery On Sunday Louisville where she applies her broad-based knowledge and experience in employment law and human resources.
+            </h1>
+        </div>
+    </div>
+
+    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+
+    <div class="row">
+        <div style="width:10%; float:left; padding-left:1vw">
+
+
+            <img src="~/BOD Pics/DennisSOSPic.png" style="width:75px; height:90px" /><img /><br />
+        </div><br />
+
+        <div style="width:90%;float:right">
+            <h1 align="left" style="font-size:18px;">
+                Dennis Hillen has an undergraduate degree in Finance from the University of Kentucky and an MBA from Indiana University – Southeast.  In addition, he is a graduate of Humana’s Healthcare Leaders 2020 program and Leadership Louisville’s Ignite Louisville program.  Dennis leads the Better Care Decisions Platform and the Innovation Strategy and Portfolio Management functions at Humana.  Prior to joining the Innovation team, he served in a variety of successive leadership roles on Humana’s finance team.  Dennis serves as the Treasurer/CFO for Surgery on Sunday Louisville.
+            </h1>
+        </div>
+    </div>
+
+    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+
+    <div class="row">
+        <div style="width:10%; float:left; padding-left:1vw">
+
+
+            <img src="~/BOD Pics/VirginiaSOSPic.png" style="width:75px; height:100px" /><img /><br />
+        </div><br />
+
+        <div style="width:90%;float:right">
+            <h1 align="left" style="font-size:18px;">
+                Virginia Mattingly earned a BA in psychology, followed by an MBA from Georgetown University McDonough School of Business, where she served as the VP of Admissions of Hispanic and Latin American Student Association, and participated in Global Residency Consulting Project in Vietnam, focused on improving a Vietnamese bank’s marketing and human resources strategies. Virginia came to Surgery On Sunday as she completed the Leadership Louisville’s Ignite Louisville program.  She has also served on the Fundraising Committee for Peace Education Program, and provides data analysis and serves as the Insights Lead for Emerging Consumer and Brands at Brown –Forman.
+            </h1>
+        </div>
+    </div>
+
+    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+
+    <div class="row">
+        <div style="width:10%; float:left; padding-left:1vw">
+
+
+            <img src="~/BOD Pics/DanielSOSPic.png" style="width:75px; height:100px" /><img /><br />
+        </div><br />
+
+        <div style="width:90%;float:right">
+            <h1 align="left" style="font-size:18px;">
+                Daniel Mudd was a double major in Finance and Business Management at the University of Kentucky Gatton College of Business and Economics, and earned his law degree in 2007 at the University of Kentucky College of Law.  Daniel is a Managing Associate Attorney and Member of Frost Brown Todd, where his focus is in tax law and legal research.  Daniel came to the Board of Directors through the Louisville Ignite Program, and serves Surgery on Sunday Louisville as legal counsel in matters pertaining to non-profit 501(c)3 structure and corporate compliance filings and legal contracts.
+            </h1>
+        </div>
+    </div>
+
+    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+
+    <div class="row">
+        <div style="width:10%; float:left; padding-left:1vw">
+
+
+            <img src="~/BOD Pics/SherriSOSPic.png" style="width:75px; height:100px" /><img /><br />
+        </div><br />
+
+        <div style="width:90%;float:right">
+            <h1 align="left" style="font-size:18px;">
+                Sherri Ryan, RN earned a BS in Business Administration and General Management from Oakland City College, an MBA at Indiana University Southeast, and an RN from Bellarmine University.  Sherri has served as a Practice Manager and Nurse Manager for several healthcare organizations, and is currently the Practice Manager for University of Louisville Physicians Neurosurgery Department.  As a former member of the Louisville Ignite Program, Sherri brings a wealth of knowledge and expertise to the Surgery On Sunday Board of Directors.
             </h1>
         </div>
     </div>
